@@ -1,41 +1,48 @@
 package ru.clevertec.ecl.service.impl;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.mapstruct.factory.Mappers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.EmptyResultDataAccessException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import ru.clevertec.ecl.controler.pagination.filter.GiftCertificateFilter;
 import ru.clevertec.ecl.repository.GiftCertificateRepository;
 import ru.clevertec.ecl.repository.TagRepository;
 import ru.clevertec.ecl.repository.entity.GiftCertificate;
 import ru.clevertec.ecl.repository.entity.Tag;
-import ru.clevertec.ecl.service.dto.create.GiftCertificateCreateDto;
-import ru.clevertec.ecl.service.dto.read.GiftCertificateReadDto;
-import ru.clevertec.ecl.service.dto.read.TagReadDto;
+import ru.clevertec.ecl.dto.create.GiftCertificateCreateDto;
+import ru.clevertec.ecl.dto.read.GiftCertificateReadDto;
+import ru.clevertec.ecl.dto.read.TagReadDto;
 import ru.clevertec.ecl.service.mappers.api.GiftCertificateMapper;
 import ru.clevertec.ecl.service.mappers.api.TagMapper;
 import ru.clevertec.ecl.testUtils.builder.impl.GiftCertificateTestBuilder;
 import ru.clevertec.ecl.testUtils.builder.impl.TagTestBuilder;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Stream;
 
-import static org.mockito.Mockito.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class GiftCertificateServiceImplTest {
+
+    @Spy
+    private GiftCertificateMapper certificateMapper = Mappers.getMapper(GiftCertificateMapper.class);;
+    @Spy
+    private TagMapper tagMapper = Mappers.getMapper(TagMapper.class);
 
     @Mock
     private GiftCertificateRepository certificateRepository;
@@ -48,18 +55,18 @@ class GiftCertificateServiceImplTest {
     private static final Long ID = 9L;
 
 
-    @Disabled
     @ParameterizedTest
     @MethodSource("provideGiftCertificateAndTag")
     void createShouldReturnReadDtoAndCallRepository(GiftCertificate certificate, Tag tag) {
         GiftCertificateCreateDto createDto = GiftCertificateTestBuilder.createDto(certificate);
-        createDto.setTags(Collections.singletonList(TagTestBuilder.createDto(tag)));
+        createDto.setTags(List.of(TagTestBuilder.createDto(tag)));
 
         GiftCertificateReadDto expected = GiftCertificateTestBuilder.readDto(certificate);
-        expected.setTags(Collections.singletonList(TagTestBuilder.readDto(tag)));
+        expected.setTags(List.of(TagTestBuilder.readDto(tag)));
 
-        doReturn(certificate).when(certificateRepository).create(certificate);
-        doReturn(tag.getId()).when(tagRepository).create(tag);
+        doReturn(certificate).when(certificateRepository).save(certificate);
+        doReturn(Optional.empty()).when(tagRepository).findByName(tag.getName());
+        lenient().doReturn(tag).when(tagRepository).save(tag);
 
         assertThat(service.create(createDto)).isEqualTo(expected);
     }
@@ -68,13 +75,15 @@ class GiftCertificateServiceImplTest {
     @MethodSource("provideGiftCertificateAndTag")
     void findByIdShouldReturnReadDto(GiftCertificate certificate, Tag tag) {
         TagReadDto tagReadDto = TagTestBuilder.readDto(tag);
+        List<TagReadDto> expectedTags = List.of(tagReadDto);
 
-        doReturn(certificate).when(certificateRepository).findById(ID);
+        certificate.setTags(List.of(tag));
+        doReturn(Optional.ofNullable(certificate)).when(certificateRepository).findById(ID);
 
-
-        List<TagReadDto> expectedTags = Collections.singletonList(tagReadDto);
         GiftCertificateReadDto expectedCertificate = GiftCertificateTestBuilder.readDto(certificate);
         expectedCertificate.setTags(expectedTags);
+
+        doReturn(expectedCertificate).when(certificateMapper).entityToReadDto(certificate);
 
         GiftCertificateReadDto actual = service.findById(ID);
 
@@ -86,19 +95,21 @@ class GiftCertificateServiceImplTest {
     @ParameterizedTest
     @MethodSource("provideGiftCertificateAndTag")
     void findAllPageableAndFilterShouldReturnExpectedList(GiftCertificate certificate, Tag tag) {
+        certificate.setTags(List.of(tag));
         Pageable pageable = PageRequest.of(0, 1);
 
         GiftCertificateReadDto readDto = GiftCertificateTestBuilder.readDto(certificate);
         List<TagReadDto> expectedTags = List.of(TagTestBuilder.readDto(tag));
         readDto.setTags(expectedTags);
-        List<GiftCertificateReadDto> expected = List.of(readDto);
+        Page<GiftCertificateReadDto> expected = new PageImpl<>(List.of(readDto));
 
-        doReturn(Collections.singletonList(certificate)).when(certificateRepository).findAllByPageableAndCertificateFilter(pageable, GiftCertificateFilter.defaultValues());
+        doReturn(readDto).when(certificateMapper).entityToReadDto(certificate);
+        doReturn(new PageImpl<>(List.of(certificate))).when(certificateRepository).findAll(any(Specification.class), any(Pageable.class));
 
-        List<GiftCertificateReadDto> actual = service.findAllByGiftCertificateFilter(pageable, GiftCertificateFilter.defaultValues());
+        Page<GiftCertificateReadDto> actual = service.findAllByGiftCertificateFilter(pageable, GiftCertificateFilter.defaultValues());
 
-        verify(certificateRepository).findAllByPageableAndCertificateFilter(pageable, GiftCertificateFilter.defaultValues());
-        assertThat(actual).isEqualTo(expected);
+        verify(certificateRepository).findAll(any(Specification.class), any(Pageable.class));
+        assertThat(actual.getContent()).isEqualTo(expected.getContent());
     }
 
     @Test
@@ -108,32 +119,40 @@ class GiftCertificateServiceImplTest {
     }
 
 
-    @Disabled("VERSION implementation removed")
     @ParameterizedTest
     @MethodSource("provideGiftCertificateAndTag")
-    void updateByIdShouldThrowExceptionIfVersionIncorrect(GiftCertificate certificate, Tag tag) {
+    void updateByIdShouldCall2Repositories(GiftCertificate certificate, Tag tag) {
+        ArrayList<Tag> tags = new ArrayList<>();
+        tags.add(tag);
+        certificate.setTags(tags);
         GiftCertificateCreateDto createDto = GiftCertificateTestBuilder.createDto(certificate);
-        createDto.setTags(Collections.singletonList(TagTestBuilder.createDto(tag)));
+        createDto.setTags(List.of(TagTestBuilder.createDto(tag)));
 
-        doReturn(certificate).when(certificateRepository).findById(certificate.getId());
+        doReturn(Optional.of(certificate)).when(certificateRepository).findById(certificate.getId());
 
+        service.update(GiftCertificateTestBuilder.createDto(certificate), certificate.getId());
+
+        verify(certificateRepository).save(certificate);
+        verify(tagRepository).findByName(tag.getName());
     }
 
     @Test
     void deleteShouldCallRepository() {
-        doNothing().when(certificateRepository).delete(any());
-        certificateRepository.delete(any());
+        GiftCertificate certificate = new GiftCertificate();
 
-        verify(certificateRepository).delete(any());
+        doReturn(Optional.of(certificate)).when(certificateRepository).findById(ID);
+        service.deleteById(ID);
+
+        verify(certificateRepository).delete(certificate);
     }
 
     private static Stream<Arguments> provideGiftCertificateAndTag() {
         return Stream.of(
-                Arguments.of(GiftCertificateTestBuilder.randomValues().build(), TagTestBuilder.randomValues().build()),
-                Arguments.of(GiftCertificateTestBuilder.randomValues().build(), TagTestBuilder.randomValues().build()),
-                Arguments.of(GiftCertificateTestBuilder.randomValues().build(), TagTestBuilder.randomValues().build()),
-                Arguments.of(GiftCertificateTestBuilder.randomValues().build(), TagTestBuilder.randomValues().build()),
-                Arguments.of(GiftCertificateTestBuilder.randomValues().build(), TagTestBuilder.randomValues().build())
+                Arguments.of(GiftCertificateTestBuilder.defaultValues().build(), TagTestBuilder.defaultValues().build()),
+                Arguments.of(GiftCertificateTestBuilder.defaultValues().build(), TagTestBuilder.defaultValues().build()),
+                Arguments.of(GiftCertificateTestBuilder.defaultValues().build(), TagTestBuilder.defaultValues().build()),
+                Arguments.of(GiftCertificateTestBuilder.defaultValues().build(), TagTestBuilder.defaultValues().build()),
+                Arguments.of(GiftCertificateTestBuilder.defaultValues().build(), TagTestBuilder.defaultValues().build())
         );
     }
 }
